# image-converter

./: Dockerfile  pyproject.toml
.github/workflows/: PythonCI.yml
ioc/: application_context.py
ioc/anotations/proxy/scheduled/kafka_listener/: default_consumer.py
ioc/mongo/: mongo.py  mongo_impl.py
local/: .env  docker-compose.yml
local/kafka/: docker-compose.yml
local/minio/: docker-compose.yml
local/mongo/: docker-compose.yml  init.js
src/: main.py
src/domain/: doc_repo.py  doc_repo_impl.py
src/domain/listeners/: image_converter_listener.py
src/domain/models/: multi_layer_tiff.py  new_photos_response.py
src/domain/workers/: worker.py
src/domain/workers/multilayertiff/: multi_layer_tiff_impl.py
src/infra/configs/: topics_conf.py
tests/: test.py
