[tool.poetry]
name = "image-converter"
version = "0.1.0"
description = ""
authors = ["asavershin <asavershin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kafka-python = "^2.0.2"
minio = "^7.2.8"
rasterio = "^1.3.10"
pydantic = "^2.8.2"
pymongo = "^4.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
testcontainers = "^4.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
